--- a/FPS project/Packages/manifest.json
+++ b/FPS project/Packages/manifest.json
@@ -1,9 +1,11 @@
 {
   "dependencies": {
+    "com.unity.cinemachine": "2.6.5",
     "com.unity.collab-proxy": "1.3.9",
     "com.unity.ide.rider": "2.0.7",
     "com.unity.ide.visualstudio": "2.0.7",
     "com.unity.ide.vscode": "1.2.3",
+    "com.unity.inputsystem": "1.0.2",
     "com.unity.probuilder": "4.5.2",
     "com.unity.progrids": "3.0.3-preview.6",
     "com.unity.render-pipelines.universal": "10.4.0",
